// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DownloadStepForm Step documentation renders correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-lndw90-MuiGrid-root"
        data-selenium="download-data-dialog.step-form.documentation"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1xp0d6e-MuiGrid-root"
        >
          <fieldset
            class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
          >
            <div
              aria-label="Documentation"
              class="MuiFormGroup-root MuiRadioGroup-root css-dmmspl-MuiFormGroup-root"
              role="radiogroup"
            >
              <label
                class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd makeStyles-radio-6 css-lxh3mz-MuiFormControlLabel-root"
              >
                <span
                  class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall Mui-checked MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall css-14hx4lc-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
                >
                  <input
                    checked=""
                    class="PrivateSwitchBase-input css-1p3z7et-MuiSwitchBase-root"
                    name="documentation"
                    type="radio"
                    value="include"
                  />
                  <span
                    class="css-19y5vkv-MuiRadioButtonIcon-root"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-q6smfc-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                      data-testid="RadioButtonUncheckedIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                      />
                    </svg>
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-majg0n-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                      data-testid="RadioButtonCheckedIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </span>
                <span
                  class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1nggj6-MuiTypography-root"
                >
                  <div
                    class="makeStyles-radioLabel-7"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-h6 css-134ad2t-MuiTypography-root"
                    >
                      Include
                    </h6>
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
                    >
                      Include relevant documents for this Data Product
                    </p>
                  </div>
                </span>
              </label>
              <label
                class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd makeStyles-radio-6 css-lxh3mz-MuiFormControlLabel-root"
              >
                <span
                  class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall css-14hx4lc-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
                >
                  <input
                    class="PrivateSwitchBase-input css-1p3z7et-MuiSwitchBase-root"
                    name="documentation"
                    type="radio"
                    value="exclude"
                  />
                  <span
                    class="css-19y5vkv-MuiRadioButtonIcon-root"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-q6smfc-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                      data-testid="RadioButtonUncheckedIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                      />
                    </svg>
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-145qo40-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                      data-testid="RadioButtonCheckedIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </span>
                <span
                  class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1nggj6-MuiTypography-root"
                >
                  <div
                    class="makeStyles-radioLabel-7"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-h6 css-134ad2t-MuiTypography-root"
                    >
                      Exclude
                    </h6>
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
                    >
                      Data only, no relevant documents for this Data Product
                    </p>
                  </div>
                </span>
              </label>
            </div>
          </fieldset>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1xp0d6e-MuiGrid-root"
        >
          <div
            class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root css-s384l0-MuiPaper-root-MuiCard-root"
            style="margin-top: 12px;"
          >
            <div
              class="MuiCardContent-root makeStyles-startFlex-9 css-ojcnvm-MuiCardContent-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge makeStyles-calloutIcon-5 css-tzssek-MuiSvgIcon-root"
                data-testid="InfoIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
                />
              </svg>
              <p
                class="MuiTypography-root MuiTypography-body1 css-1nggj6-MuiTypography-root"
              >
                EML files for this Data Product are included in all downloads. Learn more about EML files in the 
                <a
                  class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-zuor1v-MuiTypography-root-MuiLink-root"
                  data-gtm="download-data-dialog.neon-faq-link"
                  href="https://www.neonscience.org/about/faq"
                  target="_blank"
                >
                  NEON FAQ
                </a>
                 and at 
                <a
                  class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-zuor1v-MuiTypography-root-MuiLink-root"
                  data-gtm-external-host="KNB"
                  data-gtm-product-code="n/a"
                  href="https://eml.ecoinformatics.org"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  KNB
                </a>
                .
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-lndw90-MuiGrid-root"
      data-selenium="download-data-dialog.step-form.documentation"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1xp0d6e-MuiGrid-root"
      >
        <fieldset
          class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
        >
          <div
            aria-label="Documentation"
            class="MuiFormGroup-root MuiRadioGroup-root css-dmmspl-MuiFormGroup-root"
            role="radiogroup"
          >
            <label
              class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd makeStyles-radio-6 css-lxh3mz-MuiFormControlLabel-root"
            >
              <span
                class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall Mui-checked MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall css-14hx4lc-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
              >
                <input
                  checked=""
                  class="PrivateSwitchBase-input css-1p3z7et-MuiSwitchBase-root"
                  name="documentation"
                  type="radio"
                  value="include"
                />
                <span
                  class="css-19y5vkv-MuiRadioButtonIcon-root"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-q6smfc-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                    data-testid="RadioButtonUncheckedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-majg0n-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                    data-testid="RadioButtonCheckedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </span>
              <span
                class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1nggj6-MuiTypography-root"
              >
                <div
                  class="makeStyles-radioLabel-7"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-134ad2t-MuiTypography-root"
                  >
                    Include
                  </h6>
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
                  >
                    Include relevant documents for this Data Product
                  </p>
                </div>
              </span>
            </label>
            <label
              class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd makeStyles-radio-6 css-lxh3mz-MuiFormControlLabel-root"
            >
              <span
                class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall css-14hx4lc-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
              >
                <input
                  class="PrivateSwitchBase-input css-1p3z7et-MuiSwitchBase-root"
                  name="documentation"
                  type="radio"
                  value="exclude"
                />
                <span
                  class="css-19y5vkv-MuiRadioButtonIcon-root"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-q6smfc-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                    data-testid="RadioButtonUncheckedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-145qo40-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                    data-testid="RadioButtonCheckedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </span>
              <span
                class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1nggj6-MuiTypography-root"
              >
                <div
                  class="makeStyles-radioLabel-7"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-134ad2t-MuiTypography-root"
                  >
                    Exclude
                  </h6>
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
                  >
                    Data only, no relevant documents for this Data Product
                  </p>
                </div>
              </span>
            </label>
          </div>
        </fieldset>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1xp0d6e-MuiGrid-root"
      >
        <div
          class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root css-s384l0-MuiPaper-root-MuiCard-root"
          style="margin-top: 12px;"
        >
          <div
            class="MuiCardContent-root makeStyles-startFlex-9 css-ojcnvm-MuiCardContent-root"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge makeStyles-calloutIcon-5 css-tzssek-MuiSvgIcon-root"
              data-testid="InfoIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
              />
            </svg>
            <p
              class="MuiTypography-root MuiTypography-body1 css-1nggj6-MuiTypography-root"
            >
              EML files for this Data Product are included in all downloads. Learn more about EML files in the 
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-zuor1v-MuiTypography-root-MuiLink-root"
                data-gtm="download-data-dialog.neon-faq-link"
                href="https://www.neonscience.org/about/faq"
                target="_blank"
              >
                NEON FAQ
              </a>
               and at 
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-zuor1v-MuiTypography-root-MuiLink-root"
                data-gtm-external-host="KNB"
                data-gtm-product-code="n/a"
                href="https://eml.ecoinformatics.org"
                rel="noopener noreferrer"
                target="_blank"
              >
                KNB
              </a>
              .
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DownloadStepForm Step externalExclusive renders correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div />
  </body>,
  "container": <div />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DownloadStepForm Step packageType renders correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <fieldset
        class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
        data-selenium="download-data-dialog.step-form.package-type"
      >
        <div
          aria-label="Package Type"
          class="MuiFormGroup-root MuiRadioGroup-root css-dmmspl-MuiFormGroup-root"
          role="radiogroup"
        >
          <label
            class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd makeStyles-radio-54 css-lxh3mz-MuiFormControlLabel-root"
          >
            <span
              class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall css-14hx4lc-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
            >
              <input
                class="PrivateSwitchBase-input css-1p3z7et-MuiSwitchBase-root"
                name="package-type"
                type="radio"
                value="basic"
              />
              <span
                class="css-19y5vkv-MuiRadioButtonIcon-root"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-q6smfc-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                  data-testid="RadioButtonUncheckedIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-145qo40-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                  data-testid="RadioButtonCheckedIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </span>
            <span
              class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1nggj6-MuiTypography-root"
            >
              <div
                class="makeStyles-radioLabel-55"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6 css-134ad2t-MuiTypography-root"
                >
                  Basic
                </h6>
                <div
                  class="makeStyles-markdownWrapper-64 MuiTypography-root MuiTypography-body2"
                >
                  <p>
                    Includes the data product, summary statistics, expanded uncertainty, and final quality flag
                  </p>
                </div>
              </div>
            </span>
          </label>
          <label
            class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd makeStyles-radio-54 css-lxh3mz-MuiFormControlLabel-root"
          >
            <span
              class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall Mui-checked MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall css-14hx4lc-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
            >
              <input
                checked=""
                class="PrivateSwitchBase-input css-1p3z7et-MuiSwitchBase-root"
                name="package-type"
                type="radio"
                value="expanded"
              />
              <span
                class="css-19y5vkv-MuiRadioButtonIcon-root"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-q6smfc-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                  data-testid="RadioButtonUncheckedIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-majg0n-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                  data-testid="RadioButtonCheckedIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </span>
            <span
              class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1nggj6-MuiTypography-root"
            >
              <div
                class="makeStyles-radioLabel-55"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6 css-134ad2t-MuiTypography-root"
                >
                  Expanded
                </h6>
                <div
                  class="makeStyles-markdownWrapper-64 MuiTypography-root MuiTypography-body2"
                >
                  <p>
                    Includes the basic package information plus quality metrics for all of the quality assessment and quality control analysis
                  </p>
                </div>
              </div>
            </span>
          </label>
        </div>
      </fieldset>
    </div>
  </body>,
  "container": <div>
    <fieldset
      class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
      data-selenium="download-data-dialog.step-form.package-type"
    >
      <div
        aria-label="Package Type"
        class="MuiFormGroup-root MuiRadioGroup-root css-dmmspl-MuiFormGroup-root"
        role="radiogroup"
      >
        <label
          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd makeStyles-radio-54 css-lxh3mz-MuiFormControlLabel-root"
        >
          <span
            class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall css-14hx4lc-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
          >
            <input
              class="PrivateSwitchBase-input css-1p3z7et-MuiSwitchBase-root"
              name="package-type"
              type="radio"
              value="basic"
            />
            <span
              class="css-19y5vkv-MuiRadioButtonIcon-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-q6smfc-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                data-testid="RadioButtonUncheckedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-145qo40-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                data-testid="RadioButtonCheckedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </span>
          <span
            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1nggj6-MuiTypography-root"
          >
            <div
              class="makeStyles-radioLabel-55"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-134ad2t-MuiTypography-root"
              >
                Basic
              </h6>
              <div
                class="makeStyles-markdownWrapper-64 MuiTypography-root MuiTypography-body2"
              >
                <p>
                  Includes the data product, summary statistics, expanded uncertainty, and final quality flag
                </p>
              </div>
            </div>
          </span>
        </label>
        <label
          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd makeStyles-radio-54 css-lxh3mz-MuiFormControlLabel-root"
        >
          <span
            class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall Mui-checked MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall css-14hx4lc-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
          >
            <input
              checked=""
              class="PrivateSwitchBase-input css-1p3z7et-MuiSwitchBase-root"
              name="package-type"
              type="radio"
              value="expanded"
            />
            <span
              class="css-19y5vkv-MuiRadioButtonIcon-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-q6smfc-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                data-testid="RadioButtonUncheckedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-majg0n-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                data-testid="RadioButtonCheckedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </span>
          <span
            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1nggj6-MuiTypography-root"
          >
            <div
              class="makeStyles-radioLabel-55"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-134ad2t-MuiTypography-root"
              >
                Expanded
              </h6>
              <div
                class="makeStyles-markdownWrapper-64 MuiTypography-root MuiTypography-body2"
              >
                <p>
                  Includes the basic package information plus quality metrics for all of the quality assessment and quality control analysis
                </p>
              </div>
            </div>
          </span>
        </label>
      </div>
    </fieldset>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DownloadStepForm Step policies renders correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        data-selenium="download-data-dialog.step-form.policies"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom css-10z1ikn-MuiTypography-root"
        >
          In order to proceed to download NEON data you must agree to the 
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-zuor1v-MuiTypography-root-MuiLink-root"
            data-gtm="download-data-dialog.policies-link"
            href="https://www.neonscience.org/data-samples/guidelines-policies"
            target="_blank"
          >
            Data Usage and Citation Policies
          </a>
          .
        </h6>
        <label
          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd makeStyles-formControlBold-99 css-lxh3mz-MuiFormControlLabel-root"
        >
          <span
            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall css-vfw5nw-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
          >
            <input
              class="PrivateSwitchBase-input css-1p3z7et-MuiSwitchBase-root"
              data-indeterminate="false"
              type="checkbox"
              value="policies"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
              data-testid="CheckBoxOutlineBlankIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </span>
          <span
            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1nggj6-MuiTypography-root"
          >
            I agree to the NEON Data Usage and Citation Policies.
          </span>
        </label>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      data-selenium="download-data-dialog.step-form.policies"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-gutterBottom css-10z1ikn-MuiTypography-root"
      >
        In order to proceed to download NEON data you must agree to the 
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-zuor1v-MuiTypography-root-MuiLink-root"
          data-gtm="download-data-dialog.policies-link"
          href="https://www.neonscience.org/data-samples/guidelines-policies"
          target="_blank"
        >
          Data Usage and Citation Policies
        </a>
        .
      </h6>
      <label
        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd makeStyles-formControlBold-99 css-lxh3mz-MuiFormControlLabel-root"
      >
        <span
          class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall css-vfw5nw-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
        >
          <input
            class="PrivateSwitchBase-input css-1p3z7et-MuiSwitchBase-root"
            data-indeterminate="false"
            type="checkbox"
            value="policies"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
            data-testid="CheckBoxOutlineBlankIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1nggj6-MuiTypography-root"
        >
          I agree to the NEON Data Usage and Citation Policies.
        </span>
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DownloadStepForm Step provisionalData renders correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-lndw90-MuiGrid-root"
        data-selenium="download-data-dialog.step-form.provisional-data"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1xp0d6e-MuiGrid-root"
        >
          <fieldset
            class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
          >
            <div
              aria-label="Provisional Data"
              class="MuiFormGroup-root MuiRadioGroup-root css-dmmspl-MuiFormGroup-root"
              role="radiogroup"
            >
              <label
                class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd makeStyles-radio-70 css-lxh3mz-MuiFormControlLabel-root"
              >
                <span
                  class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall css-14hx4lc-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
                >
                  <input
                    class="PrivateSwitchBase-input css-1p3z7et-MuiSwitchBase-root"
                    name="provisional-data"
                    type="radio"
                    value="include"
                  />
                  <span
                    class="css-19y5vkv-MuiRadioButtonIcon-root"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-q6smfc-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                      data-testid="RadioButtonUncheckedIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                      />
                    </svg>
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-145qo40-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                      data-testid="RadioButtonCheckedIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </span>
                <span
                  class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1nggj6-MuiTypography-root"
                >
                  <div
                    class="makeStyles-radioLabel-71"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-h6 css-134ad2t-MuiTypography-root"
                    >
                      Include
                    </h6>
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
                    >
                      Include provisional data in this download package (
                      <b>
                        Warning:
                      </b>
                       subject to change and not reproducible)
                    </p>
                  </div>
                </span>
              </label>
              <label
                class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd makeStyles-radio-70 css-lxh3mz-MuiFormControlLabel-root"
              >
                <span
                  class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall Mui-checked MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall css-14hx4lc-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
                >
                  <input
                    checked=""
                    class="PrivateSwitchBase-input css-1p3z7et-MuiSwitchBase-root"
                    name="provisional-data"
                    type="radio"
                    value="exclude"
                  />
                  <span
                    class="css-19y5vkv-MuiRadioButtonIcon-root"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-q6smfc-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                      data-testid="RadioButtonUncheckedIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                      />
                    </svg>
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-majg0n-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                      data-testid="RadioButtonCheckedIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </span>
                <span
                  class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1nggj6-MuiTypography-root"
                >
                  <div
                    class="makeStyles-radioLabel-71"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-h6 css-134ad2t-MuiTypography-root"
                    >
                      Exclude
                    </h6>
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
                    >
                      Release data only, no provisional data included in this download package
                    </p>
                  </div>
                </span>
              </label>
            </div>
          </fieldset>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1xp0d6e-MuiGrid-root"
        >
          <div
            class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root css-s384l0-MuiPaper-root-MuiCard-root"
            style="margin-top: 12px;"
          >
            <div
              class="MuiCardContent-root makeStyles-startFlex-73 css-ojcnvm-MuiCardContent-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge makeStyles-calloutIcon-69 css-tzssek-MuiSvgIcon-root"
                data-testid="InfoIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
                />
              </svg>
              <p
                class="MuiTypography-root MuiTypography-body1 css-1nggj6-MuiTypography-root"
              >
                Learn more about data product revisions, releases and provisional data at 
                <a
                  class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-zuor1v-MuiTypography-root-MuiLink-root"
                  data-gtm="download-data-dialog.neon-data-revisions-releases-link"
                  href="https://www.neonscience.org/data-samples/data-management/data-revisions-releases"
                  target="_blank"
                >
                  NEON Data Revisions and Releases
                </a>
                .
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-lndw90-MuiGrid-root"
      data-selenium="download-data-dialog.step-form.provisional-data"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1xp0d6e-MuiGrid-root"
      >
        <fieldset
          class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
        >
          <div
            aria-label="Provisional Data"
            class="MuiFormGroup-root MuiRadioGroup-root css-dmmspl-MuiFormGroup-root"
            role="radiogroup"
          >
            <label
              class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd makeStyles-radio-70 css-lxh3mz-MuiFormControlLabel-root"
            >
              <span
                class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall css-14hx4lc-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
              >
                <input
                  class="PrivateSwitchBase-input css-1p3z7et-MuiSwitchBase-root"
                  name="provisional-data"
                  type="radio"
                  value="include"
                />
                <span
                  class="css-19y5vkv-MuiRadioButtonIcon-root"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-q6smfc-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                    data-testid="RadioButtonUncheckedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-145qo40-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                    data-testid="RadioButtonCheckedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </span>
              <span
                class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1nggj6-MuiTypography-root"
              >
                <div
                  class="makeStyles-radioLabel-71"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-134ad2t-MuiTypography-root"
                  >
                    Include
                  </h6>
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
                  >
                    Include provisional data in this download package (
                    <b>
                      Warning:
                    </b>
                     subject to change and not reproducible)
                  </p>
                </div>
              </span>
            </label>
            <label
              class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd makeStyles-radio-70 css-lxh3mz-MuiFormControlLabel-root"
            >
              <span
                class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall Mui-checked MuiRadio-root MuiRadio-colorPrimary MuiRadio-sizeSmall css-14hx4lc-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
              >
                <input
                  checked=""
                  class="PrivateSwitchBase-input css-1p3z7et-MuiSwitchBase-root"
                  name="provisional-data"
                  type="radio"
                  value="exclude"
                />
                <span
                  class="css-19y5vkv-MuiRadioButtonIcon-root"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-q6smfc-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                    data-testid="RadioButtonUncheckedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                    />
                  </svg>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-majg0n-MuiSvgIcon-root-MuiRadioButtonIcon-root"
                    data-testid="RadioButtonCheckedIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </span>
              <span
                class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1nggj6-MuiTypography-root"
              >
                <div
                  class="makeStyles-radioLabel-71"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-134ad2t-MuiTypography-root"
                  >
                    Exclude
                  </h6>
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-zrdyvb-MuiTypography-root"
                  >
                    Release data only, no provisional data included in this download package
                  </p>
                </div>
              </span>
            </label>
          </div>
        </fieldset>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1xp0d6e-MuiGrid-root"
      >
        <div
          class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root css-s384l0-MuiPaper-root-MuiCard-root"
          style="margin-top: 12px;"
        >
          <div
            class="MuiCardContent-root makeStyles-startFlex-73 css-ojcnvm-MuiCardContent-root"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge makeStyles-calloutIcon-69 css-tzssek-MuiSvgIcon-root"
              data-testid="InfoIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
              />
            </svg>
            <p
              class="MuiTypography-root MuiTypography-body1 css-1nggj6-MuiTypography-root"
            >
              Learn more about data product revisions, releases and provisional data at 
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-zuor1v-MuiTypography-root-MuiLink-root"
                data-gtm="download-data-dialog.neon-data-revisions-releases-link"
                href="https://www.neonscience.org/data-samples/data-management/data-revisions-releases"
                target="_blank"
              >
                NEON Data Revisions and Releases
              </a>
              .
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DownloadStepForm Step s3Files renders correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="makeStyles-fileTable-34"
        id="s3Files-selection-table-container"
      >
        <div
          data-component-path="material-table"
          data-prop-columns="[{"title":"Site","field":"site","lookup":{},"defaultFilter":[],"hidden":false},{"title":"Date","field":"yearMonth","lookup":{},"defaultFilter":[],"hidden":false},{"title":"Visit","field":"visit","lookup":{},"defaultFilter":[],"hidden":false},{"title":"Name","field":"name","defaultFilter":"","hidden":false},{"title":"Type","field":"type","lookup":{},"defaultFilter":[],"hidden":false},{"title":"Size","field":"size","filtering":false,"removable":false}]"
          data-prop-components="{"Container":{"propTypes":{}}}"
          data-prop-data="[{"url":"f1","tableData":"f1"},{"url":"f2","tableData":"f2"},{"url":"f3","tableData":"f3"}]"
          data-prop-icons="{"Add":{},"Check":{},"Clear":{},"Delete":{},"DetailPanel":{},"Edit":{},"Export":{},"Filter":{},"FirstPage":{},"LastPage":{},"NextPage":{},"PreviousPage":{},"ResetSearch":{},"Search":{},"SortArrow":{},"ThirdStateCheck":{},"ViewColumn":{}}"
          data-prop-localization="{"pagination":{"labelRowsSelect":"files"},"toolbar":{"nRowsSelected":"{0} files selected (12.1 KB uncompressed)"},"body":{"emptyDataSourceMessage":"No files to display. Select more sites, broaden date range, or broaden search / filters."}}"
          data-prop-onselectionchange="[Function]"
          data-prop-options="{"selection":true,"showSelectAllCheckbox":false,"padding":"dense","filtering":true,"columnsButton":false,"pageSize":10,"pageSizeOptions":[5,10,50,100],"showTitle":false,"search":false,"isLoading":false}"
        />
        <div
          class="makeStyles-loadingOverlay-36"
          style="display: none;"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-134ad2t-MuiTypography-root"
            style="margin-bottom: 32px;"
          >
            Loading files (0%)...
          </h6>
          <span
            aria-valuenow="0"
            class="MuiCircularProgress-root MuiCircularProgress-determinate MuiCircularProgress-colorPrimary css-21zp0h-MuiCircularProgress-root"
            role="progressbar"
            style="width: 40px; height: 40px; transform: rotate(-90deg);"
          >
            <svg
              class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
              viewBox="22 22 44 44"
            >
              <circle
                class="MuiCircularProgress-circle MuiCircularProgress-circleDeterminate css-oxts8u-MuiCircularProgress-circle"
                cx="44"
                cy="44"
                fill="none"
                r="20.2"
                stroke-width="3.6"
                style="stroke-dasharray: 126.920; stroke-dashoffset: 126.920px;"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="makeStyles-fileTable-34"
      id="s3Files-selection-table-container"
    >
      <div
        data-component-path="material-table"
        data-prop-columns="[{"title":"Site","field":"site","lookup":{},"defaultFilter":[],"hidden":false},{"title":"Date","field":"yearMonth","lookup":{},"defaultFilter":[],"hidden":false},{"title":"Visit","field":"visit","lookup":{},"defaultFilter":[],"hidden":false},{"title":"Name","field":"name","defaultFilter":"","hidden":false},{"title":"Type","field":"type","lookup":{},"defaultFilter":[],"hidden":false},{"title":"Size","field":"size","filtering":false,"removable":false}]"
        data-prop-components="{"Container":{"propTypes":{}}}"
        data-prop-data="[{"url":"f1","tableData":"f1"},{"url":"f2","tableData":"f2"},{"url":"f3","tableData":"f3"}]"
        data-prop-icons="{"Add":{},"Check":{},"Clear":{},"Delete":{},"DetailPanel":{},"Edit":{},"Export":{},"Filter":{},"FirstPage":{},"LastPage":{},"NextPage":{},"PreviousPage":{},"ResetSearch":{},"Search":{},"SortArrow":{},"ThirdStateCheck":{},"ViewColumn":{}}"
        data-prop-localization="{"pagination":{"labelRowsSelect":"files"},"toolbar":{"nRowsSelected":"{0} files selected (12.1 KB uncompressed)"},"body":{"emptyDataSourceMessage":"No files to display. Select more sites, broaden date range, or broaden search / filters."}}"
        data-prop-onselectionchange="[Function]"
        data-prop-options="{"selection":true,"showSelectAllCheckbox":false,"padding":"dense","filtering":true,"columnsButton":false,"pageSize":10,"pageSizeOptions":[5,10,50,100],"showTitle":false,"search":false,"isLoading":false}"
      />
      <div
        class="makeStyles-loadingOverlay-36"
        style="display: none;"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-134ad2t-MuiTypography-root"
          style="margin-bottom: 32px;"
        >
          Loading files (0%)...
        </h6>
        <span
          aria-valuenow="0"
          class="MuiCircularProgress-root MuiCircularProgress-determinate MuiCircularProgress-colorPrimary css-21zp0h-MuiCircularProgress-root"
          role="progressbar"
          style="width: 40px; height: 40px; transform: rotate(-90deg);"
        >
          <svg
            class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleDeterminate css-oxts8u-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
              style="stroke-dasharray: 126.920; stroke-dashoffset: 126.920px;"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DownloadStepForm Step sitesAndDateRange renders correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        data-component-path="../../DataProductAvailability/DataProductAvailability"
        data-prop-data-selenium="download-data-dialog.step-form.sites-and-date-range"
        data-prop-delineaterelease="true"
      />
    </div>
  </body>,
  "container": <div>
    <div
      data-component-path="../../DataProductAvailability/DataProductAvailability"
      data-prop-data-selenium="download-data-dialog.step-form.sites-and-date-range"
      data-prop-delineaterelease="true"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DownloadStepForm Step summary renders correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-lndw90-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1xp0d6e-MuiGrid-root"
        >
          <div
            data-selenium="download-data-dialog.step-form.summary"
          >
            <div
              class="makeStyles-stepSummary-122"
            >
              <div
                class="makeStyles-stepSummaryHeader-123"
                role="button"
                tabindex="0"
              >
                <div
                  class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-filledPrimary makeStyles-summaryChip-125 css-nqomul-MuiChip-root"
                >
                  <span
                    class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
                  >
                    1
                  </span>
                </div>
                <h6
                  class="MuiTypography-root MuiTypography-h6 css-134ad2t-MuiTypography-root"
                  style="flex-grow: 1;"
                >
                  Sites and Date Range
                </h6>
              </div>
              <div
                class="makeStyles-stepSummaryContent-124"
              >
                <div
                  class="MuiChip-root MuiChip-filled MuiChip-sizeLarge MuiChip-colorSecondary MuiChip-filledSecondary css-y4yqg9-MuiChip-root"
                  data-selenium="site-chip"
                  style="background-color: rgb(0, 44, 119); font-size: 1rem; border-radius: 20px; height: 40px;"
                >
                  <div
                    class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault MuiChip-avatar MuiChip-avatarLarge MuiChip-avatarColorSecondary makeStyles-avatarLarge-129 css-18uepp3-MuiAvatar-root"
                    style="width: 40px; height: 40px; margin-left: 0px; background-color: rgb(0, 44, 119);"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="PlaceIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7m0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5"
                      />
                    </svg>
                  </div>
                  <span
                    class="MuiChip-label MuiChip-labelLarge css-1dybbl5-MuiChip-label"
                  >
                    3 sites — Jan 2020 - Jan 2020
                  </span>
                </div>
              </div>
            </div>
            <div
              class="makeStyles-stepSummary-122"
            >
              <div
                class="makeStyles-stepSummaryHeader-123"
                role="button"
                tabindex="0"
              >
                <div
                  class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-filledPrimary makeStyles-summaryChip-125 css-nqomul-MuiChip-root"
                >
                  <span
                    class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
                  >
                    2
                  </span>
                </div>
                <h6
                  class="MuiTypography-root MuiTypography-h6 css-134ad2t-MuiTypography-root"
                  style="flex-grow: 1;"
                >
                  Documentation
                </h6>
              </div>
              <div
                class="makeStyles-stepSummaryContent-124"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2 makeStyles-summaryText-126 css-zrdyvb-MuiTypography-root"
                >
                  Include
                </p>
              </div>
            </div>
            <div
              class="makeStyles-stepSummary-122"
            >
              <div
                class="makeStyles-stepSummaryHeader-123"
                role="button"
                tabindex="0"
              >
                <div
                  class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-filledPrimary makeStyles-summaryChip-125 css-nqomul-MuiChip-root"
                >
                  <span
                    class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
                  >
                    3
                  </span>
                </div>
                <h6
                  class="MuiTypography-root MuiTypography-h6 css-134ad2t-MuiTypography-root"
                  style="flex-grow: 1;"
                >
                  Package Type
                </h6>
              </div>
              <div
                class="makeStyles-stepSummaryContent-124"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2 makeStyles-summaryText-126 css-zrdyvb-MuiTypography-root"
                >
                  Expanded
                </p>
              </div>
            </div>
            <div
              class="makeStyles-stepSummary-122"
            >
              <div
                class="makeStyles-stepSummaryHeader-123"
                role="button"
                tabindex="0"
              >
                <div
                  class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-filledPrimary makeStyles-summaryChip-125 css-nqomul-MuiChip-root"
                >
                  <span
                    class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
                  >
                    4
                  </span>
                </div>
                <h6
                  class="MuiTypography-root MuiTypography-h6 css-134ad2t-MuiTypography-root"
                  style="flex-grow: 1;"
                >
                  Files
                </h6>
              </div>
              <div
                class="makeStyles-stepSummaryContent-124"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2 makeStyles-summaryText-126 css-zrdyvb-MuiTypography-root"
                >
                  3 files (12.1 KB uncompressed)
                </p>
              </div>
            </div>
            <div
              class="makeStyles-stepSummary-122"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1xp0d6e-MuiGrid-root"
        >
          <div
            class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root css-s384l0-MuiPaper-root-MuiCard-root"
            data-selenium="download-data-dialog.step-form.summary.download-and-explore"
            style="margin: 4px 0px 24px 0px;"
          >
            <div
              class="MuiCardContent-root makeStyles-startFlex-121 css-ojcnvm-MuiCardContent-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge makeStyles-calloutIcon-117 css-tzssek-MuiSvgIcon-root"
                data-testid="ExploreIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 10.9c-.61 0-1.1.49-1.1 1.1s.49 1.1 1.1 1.1c.61 0 1.1-.49 1.1-1.1s-.49-1.1-1.1-1.1M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m2.19 12.19L6 18l3.81-8.19L18 6z"
                />
              </svg>
              <h6
                class="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
              >
                Tip: Check out our 
                <a
                  class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-zuor1v-MuiTypography-root-MuiLink-root"
                  data-gtm="download-data-dialog.download-and-explore-link"
                  href="https://www.neonscience.org/resources/learning-hub/tutorials/download-explore-neon-data"
                  target="_blank"
                >
                  Download and Explore NEON Data
                </a>
                 tutorial. This tutorial will explain how our neonUtilities package can be used to unzip and join data tables with just a few lines of code.
              </h6>
            </div>
          </div>
          <div
            class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root css-s384l0-MuiPaper-root-MuiCard-root"
            data-selenium="download-data-dialog.step-form.summary.file-naming"
            style="margin: 4px 0px 24px 0px;"
          >
            <div
              class="MuiCardContent-root makeStyles-startFlex-121 css-ojcnvm-MuiCardContent-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge makeStyles-calloutIcon-117 css-tzssek-MuiSvgIcon-root"
                data-testid="DescriptionIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8zm2 16H8v-2h8zm0-4H8v-2h8zm-3-5V3.5L18.5 9z"
                />
              </svg>
              <h6
                class="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
              >
                Files in this download will follow 
                <a
                  class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-zuor1v-MuiTypography-root-MuiLink-root"
                  data-gtm="download-data-dialog.file-naming-conventions-link"
                  href="https://www.neonscience.org/data-samples/data-management/data-formats-conventions"
                  target="_blank"
                >
                  NEON File Naming Conventions
                </a>
                .
              </h6>
            </div>
          </div>
          <div
            class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root css-s384l0-MuiPaper-root-MuiCard-root"
            data-selenium="download-data-dialog.step-form.summary.citation"
            style="margin: 4px 0px 24px 0px;"
          >
            <div
              class="MuiCardContent-root css-ojcnvm-MuiCardContent-root"
            >
              <div
                data-component-path="../../Citation/DataProductCitation"
                data-prop-productcode=""
                data-prop-showquoteicon="true"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-lndw90-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1xp0d6e-MuiGrid-root"
      >
        <div
          data-selenium="download-data-dialog.step-form.summary"
        >
          <div
            class="makeStyles-stepSummary-122"
          >
            <div
              class="makeStyles-stepSummaryHeader-123"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-filledPrimary makeStyles-summaryChip-125 css-nqomul-MuiChip-root"
              >
                <span
                  class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
                >
                  1
                </span>
              </div>
              <h6
                class="MuiTypography-root MuiTypography-h6 css-134ad2t-MuiTypography-root"
                style="flex-grow: 1;"
              >
                Sites and Date Range
              </h6>
            </div>
            <div
              class="makeStyles-stepSummaryContent-124"
            >
              <div
                class="MuiChip-root MuiChip-filled MuiChip-sizeLarge MuiChip-colorSecondary MuiChip-filledSecondary css-y4yqg9-MuiChip-root"
                data-selenium="site-chip"
                style="background-color: rgb(0, 44, 119); font-size: 1rem; border-radius: 20px; height: 40px;"
              >
                <div
                  class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault MuiChip-avatar MuiChip-avatarLarge MuiChip-avatarColorSecondary makeStyles-avatarLarge-129 css-18uepp3-MuiAvatar-root"
                  style="width: 40px; height: 40px; margin-left: 0px; background-color: rgb(0, 44, 119);"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="PlaceIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7m0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5"
                    />
                  </svg>
                </div>
                <span
                  class="MuiChip-label MuiChip-labelLarge css-1dybbl5-MuiChip-label"
                >
                  3 sites — Jan 2020 - Jan 2020
                </span>
              </div>
            </div>
          </div>
          <div
            class="makeStyles-stepSummary-122"
          >
            <div
              class="makeStyles-stepSummaryHeader-123"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-filledPrimary makeStyles-summaryChip-125 css-nqomul-MuiChip-root"
              >
                <span
                  class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
                >
                  2
                </span>
              </div>
              <h6
                class="MuiTypography-root MuiTypography-h6 css-134ad2t-MuiTypography-root"
                style="flex-grow: 1;"
              >
                Documentation
              </h6>
            </div>
            <div
              class="makeStyles-stepSummaryContent-124"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 makeStyles-summaryText-126 css-zrdyvb-MuiTypography-root"
              >
                Include
              </p>
            </div>
          </div>
          <div
            class="makeStyles-stepSummary-122"
          >
            <div
              class="makeStyles-stepSummaryHeader-123"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-filledPrimary makeStyles-summaryChip-125 css-nqomul-MuiChip-root"
              >
                <span
                  class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
                >
                  3
                </span>
              </div>
              <h6
                class="MuiTypography-root MuiTypography-h6 css-134ad2t-MuiTypography-root"
                style="flex-grow: 1;"
              >
                Package Type
              </h6>
            </div>
            <div
              class="makeStyles-stepSummaryContent-124"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 makeStyles-summaryText-126 css-zrdyvb-MuiTypography-root"
              >
                Expanded
              </p>
            </div>
          </div>
          <div
            class="makeStyles-stepSummary-122"
          >
            <div
              class="makeStyles-stepSummaryHeader-123"
              role="button"
              tabindex="0"
            >
              <div
                class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorPrimary MuiChip-filledPrimary makeStyles-summaryChip-125 css-nqomul-MuiChip-root"
              >
                <span
                  class="MuiChip-label MuiChip-labelMedium css-1dybbl5-MuiChip-label"
                >
                  4
                </span>
              </div>
              <h6
                class="MuiTypography-root MuiTypography-h6 css-134ad2t-MuiTypography-root"
                style="flex-grow: 1;"
              >
                Files
              </h6>
            </div>
            <div
              class="makeStyles-stepSummaryContent-124"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 makeStyles-summaryText-126 css-zrdyvb-MuiTypography-root"
              >
                3 files (12.1 KB uncompressed)
              </p>
            </div>
          </div>
          <div
            class="makeStyles-stepSummary-122"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1xp0d6e-MuiGrid-root"
      >
        <div
          class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root css-s384l0-MuiPaper-root-MuiCard-root"
          data-selenium="download-data-dialog.step-form.summary.download-and-explore"
          style="margin: 4px 0px 24px 0px;"
        >
          <div
            class="MuiCardContent-root makeStyles-startFlex-121 css-ojcnvm-MuiCardContent-root"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge makeStyles-calloutIcon-117 css-tzssek-MuiSvgIcon-root"
              data-testid="ExploreIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 10.9c-.61 0-1.1.49-1.1 1.1s.49 1.1 1.1 1.1c.61 0 1.1-.49 1.1-1.1s-.49-1.1-1.1-1.1M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m2.19 12.19L6 18l3.81-8.19L18 6z"
              />
            </svg>
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
            >
              Tip: Check out our 
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-zuor1v-MuiTypography-root-MuiLink-root"
                data-gtm="download-data-dialog.download-and-explore-link"
                href="https://www.neonscience.org/resources/learning-hub/tutorials/download-explore-neon-data"
                target="_blank"
              >
                Download and Explore NEON Data
              </a>
               tutorial. This tutorial will explain how our neonUtilities package can be used to unzip and join data tables with just a few lines of code.
            </h6>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root css-s384l0-MuiPaper-root-MuiCard-root"
          data-selenium="download-data-dialog.step-form.summary.file-naming"
          style="margin: 4px 0px 24px 0px;"
        >
          <div
            class="MuiCardContent-root makeStyles-startFlex-121 css-ojcnvm-MuiCardContent-root"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge makeStyles-calloutIcon-117 css-tzssek-MuiSvgIcon-root"
              data-testid="DescriptionIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8zm2 16H8v-2h8zm0-4H8v-2h8zm-3-5V3.5L18.5 9z"
              />
            </svg>
            <h6
              class="MuiTypography-root MuiTypography-subtitle2 css-g2luyu-MuiTypography-root"
            >
              Files in this download will follow 
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-zuor1v-MuiTypography-root-MuiLink-root"
                data-gtm="download-data-dialog.file-naming-conventions-link"
                href="https://www.neonscience.org/data-samples/data-management/data-formats-conventions"
                target="_blank"
              >
                NEON File Naming Conventions
              </a>
              .
            </h6>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root css-s384l0-MuiPaper-root-MuiCard-root"
          data-selenium="download-data-dialog.step-form.summary.citation"
          style="margin: 4px 0px 24px 0px;"
        >
          <div
            class="MuiCardContent-root css-ojcnvm-MuiCardContent-root"
          >
            <div
              data-component-path="../../Citation/DataProductCitation"
              data-prop-productcode=""
              data-prop-showquoteicon="true"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
